# cookiecutter-pytest-plugin

./: .gitignore  .travis.yml  CONTRIBUTING.md  CONTRIBUTORS.md  Makefile  README.md  README.rst  cookiecutter.json  mkdocs.yml  tox.ini
.github/workflows/: run-checks.yml
docs/: index.md
docs/contributor-guide/: documentation.md  quickstart.md
docs/user-guide/: publish-plugin.md  quickstart.md
hooks/: post_gen_project.py  pre_gen_project.py
nomad-{{cookiecutter.plugin_name}}/: pyproject.toml
nomad-{{cookiecutter.plugin_name}}/licenses/: BSD-3  GPL-3  MIT  MPL-2
nomad-{{cookiecutter.plugin_name}}/py_sources/src/normalizer/: normalizer.py
nomad-{{cookiecutter.plugin_name}}/py_sources/src/schema/: schema.py
nomad-{{cookiecutter.plugin_name}}/py_sources/tests/schema/: test_schema.py
nomad-{{cookiecutter.plugin_name}}/py_sources/tests/schema/data/: test_archive.yaml
nomad-{{cookiecutter.plugin_name}}/src/nomad_{{cookiecutter.module_name}}/: nomad_plugin.yaml
pytest-{{cookiecutter.plugin_name|lower|replace('pytest-','')|replace('pytest_','')}}/: README.rst
pytest-{{cookiecutter.plugin_name}}/: .travis.yml  LICENSE  README.rst  README.template  appveyor.yml  mkdocs.yml  pyproject.toml  pytest_{{cookiecutter.module_name}}.py  pytest_{{cookiecutter.plugin_name}}.py  setup.cfg  setup.py  test_{{cookiecutter.plugin_name}}.py  tox.ini
pytest-{{cookiecutter.plugin_name}}/.github/workflows/: main.yml
pytest-{{cookiecutter.plugin_name}}/doc_sources/mkdocs/: index.md
pytest-{{cookiecutter.plugin_name}}/docs_sources/sphinx/: Makefile  conf.py  index.rst  make.bat
pytest-{{cookiecutter.plugin_name}}/licenses/: Apache-2  BSD-3  GPL-3  MIT  MPL-2
pytest-{{cookiecutter.plugin_name}}/macros/: rst
pytest-{{cookiecutter.plugin_name}}/mkdocs/: mkdocs.yml
pytest-{{cookiecutter.plugin_name}}/sphinxdocs/: conf.py  make.bat
pytest-{{cookiecutter.plugin_name}}/src/pytest_{{cookiecutter.module_name}}/: plugin.py
pytest-{{cookiecutter.plugin_name}}/tests/: test_{{cookiecutter.module_name}}.py  test_{{cookiecutter.plugin_name}}.py
tests/: test_create_template.py
